--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-JWT_PASS = "arjun@notesapp"
+JWT_PASS=arjun@notesapp
 PORT=3333
+MONGO_URI=mongodb+srv://arjunpotter17:n5PZO9uYFjbSi9g3@cohort-cluster.npcszzm.mongodb.net/
