--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "find-config": "^1.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3"
   }
